--- a/ERP Love-Gid/Views/Home/AddContract.cshtml
+++ b/ERP Love-Gid/Views/Home/AddContract.cshtml
@@ -15,6 +15,8 @@
 
                 @using (Html.BeginForm("AddContract", "Home", FormMethod.Post))
                 {
+                    <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+
 
 
                     <p>@Html.ActionLink("Обратно к списку", "Index")</p>
@@ -91,7 +93,7 @@
 
                             </td>
                         </tr>
-                       
+
                         <tr>
                             <td>
                                 <p>
