--- a/ERP Love-Gid/Views/Home/EditPay_min.cshtml
+++ b/ERP Love-Gid/Views/Home/EditPay_min.cshtml
@@ -15,6 +15,7 @@
 
                 @using (Html.BeginForm("EditPay_min", "Home", FormMethod.Post))
                 {
+                    <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
 
 
                     <p>@Html.ActionLink("Обратно к списку", "MyFinanses")</p>
