--- a/ERP Love-Gid/Views/Shared/_Layout.cshtml
+++ b/ERP Love-Gid/Views/Shared/_Layout.cshtml
@@ -12,18 +12,20 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+   
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+                <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
 
                 @if (ViewBag.DateMonth1 != null)
                 {
                     <span>
-                        @Html.DropDownList("DateMonth", (IEnumerable<SelectListItem>)ViewData["DateMonth1"], null, new { id= "Months",style = "width : 200px; background:#5682a3", @class = "navbar-brand", onchange = "onMyDropDownChange()" });@Html.ValidationMessage("DatePays");
+                        @Html.DropDownList("DateMonth", (IEnumerable<SelectListItem>)ViewData["DateMonth1"], null, new { id = "Months", style = "width : 200px; background:#5682a3", @class = "navbar-brand", onchange = "onMyDropDownChange()", CurUserId=@ViewBag.CurUserId });@Html.ValidationMessage("DatePays");
                     </span>
                 }
-                @Html.ActionLink("Мои договоры", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Мои Финансы", "MyFinanses", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Мои договоры", "Index", "Home", new { area = "", idUser =Convert.ToInt32(ViewBag.CurUserId)  }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Мои Финансы", "MyFinanses", "Home", new { area = "" , CurUserId = Convert.ToInt32(ViewBag.CurUserId) }, new { @class = "navbar-brand" })
 
 
                 @if (ViewBag.Admin == true)
@@ -57,7 +59,7 @@
 <script>
     function onMyDropDownChange() { 
 
-        window.location.href = '@(Url.Action(ViewContext.RouteData.Values["action"].ToString(), ViewContext.RouteData.Values["controller"].ToString()))?numberofMonth=' + $("#Months").get(0).selectedIndex ;
+        window.location.href = '@(Url.Action(ViewContext.RouteData.Values["action"].ToString(), ViewContext.RouteData.Values["controller"].ToString()))?numberofMonth=' + $("#Months").get(0).selectedIndex +"&CurUserId="+@ViewBag.CurUserId;
     }
  
 </script>
