--- a/ERP Love-Gid/Views/Admin/AddEmployee.cshtml
+++ b/ERP Love-Gid/Views/Admin/AddEmployee.cshtml
@@ -8,8 +8,9 @@
 @using (Html.BeginForm("AddEmployee", "Admin", FormMethod.Post))
 {
 
+    <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
 
-    <p>@Html.ActionLink("Обратно к списку", "Employees")</p>
+    <p>@Html.ActionLink("Обратно к списку", "Employees", new {  CurUserId = Convert.ToInt32(ViewBag.CurUserId) })</p>
     <input hidden value=@ViewBag.Id name="IdValue" />
     <table>
 
