--- a/ERP Love-Gid/Views/Admin/Index.cshtml
+++ b/ERP Love-Gid/Views/Admin/Index.cshtml
@@ -8,6 +8,8 @@
 
 @using (Html.BeginForm("Index", "Admin", FormMethod.Post))
 {
+    <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+
     @*<p> @Html.DropDownList("Year", (IEnumerable<SelectListItem>)ViewData["Years"], null, new { style = "width : 200px", @class = "form-control" }) @Html.ValidationMessage("Years")</p>*@
     <table>
         <tr>
@@ -26,20 +28,20 @@
         @foreach (Contract cw in (IEnumerable<Contract>)ViewData["Contracts"])
         {
 
-        <tr onclick="window.location.href = '@Url.Action("EditContract", "Home", new { id = cw.Id, IsAdmin = true })'">
-            <td>@cw.Date_of_event.Value.Day.@cw.Date_of_event.Value.Month.@cw.Date_of_event.Value.Year</td>
-            <td>@cw.EmployeeSet.Name  @cw.EmployeeSet.Surname.First()</td>
+            <tr onclick="window.location.href = '@Url.Action("EditContract", "Home", new { id = cw.Id, IsAdmin = true , CurUserId = Convert.ToInt32(ViewBag.CurUserId)})'">
+                <td>@cw.Date_of_event.Value.Day.@cw.Date_of_event.Value.Month.@cw.Date_of_event.Value.Year</td>
+                <td>@cw.EmployeeSet.Name  @cw.EmployeeSet.Surname.First()</td>
 
-            <td>@cw.ClientSet.FIO</td>
-            <td>@cw.EventSet.Type</td>
-            <td>@cw.Sum_only_contract</td>
+                <td>@cw.ClientSet.FIO</td>
+                <td>@cw.EventSet.Type</td>
+                <td>@cw.Sum_only_contract</td>
 
-            <td>@cw.Received</td>
-            <td>@cw.Sum_plus</td>
-            <td>@cw.Status</td>
-            <td>@cw.Comment</td>
+                <td>@cw.Received</td>
+                <td>@cw.Sum_plus</td>
+                <td>@cw.Status</td>
+                <td>@cw.Comment</td>
 
-        </tr>
+            </tr>
         }
     </table>
 
