--- a/ERP Love-Gid/Views/Home/AddContract.cshtml
+++ b/ERP Love-Gid/Views/Home/AddContract.cshtml
@@ -16,6 +16,7 @@
                 @using (Html.BeginForm("AddContract", "Home", FormMethod.Post))
                 {
                     <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+                    <input hidden value="@ViewBag.adminId" name="adminId" />
 
 
 
