--- a/ERP Love-Gid/Views/Home/EditContract.cshtml
+++ b/ERP Love-Gid/Views/Home/EditContract.cshtml
@@ -17,6 +17,7 @@
                 {
                     <input type="hidden" value="@ViewBag.ID" name="Id_Cont" />
                     <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+                    <input hidden value="@ViewBag.adminId" name="adminId" />
 
 
                     <p>@Html.ActionLink("Обратно к списку", "Index")</p>
