--- a/ERP Love-Gid/Views/Home/Index.cshtml
+++ b/ERP Love-Gid/Views/Home/Index.cshtml
@@ -8,6 +8,8 @@
 @using (Html.BeginForm("Index", "Home", FormMethod.Post))
 {
     <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+    <input hidden value="@ViewBag.adminId" name="adminId" />
+
     @*<p> @Html.DropDownList("Year", (IEnumerable<SelectListItem>)ViewData["Years"], null, new { style = "width : 200px", @class = "form-control" }) @Html.ValidationMessage("Years")</p>*@
     <table>
         <tr>
@@ -24,7 +26,7 @@
         @foreach (Contract cw in (IEnumerable<Contract>)ViewData["Contracts"])
         {
 
-            <tr onclick="window.location.href = '@Url.Action("EditContract", "Home", new { id = cw.Id , CurUserId = Convert.ToInt32(@ViewBag.CurUserId)})'">
+            <tr onclick="window.location.href = '@Url.Action("EditContract", "Home", new { id = cw.Id , CurUserId = Convert.ToInt32(@ViewBag.CurUserId), adminId = Convert.ToInt32(@ViewBag.adminId)})'">
                 <td>@cw.Date_of_event.Value.Day.@cw.Date_of_event.Value.Month.@cw.Date_of_event.Value.Year</td>
 
                 <td>@cw.ClientSet.FIO</td>
