--- a/ERP Love-Gid/Views/Admin/CompanyFinanses.cshtml
+++ b/ERP Love-Gid/Views/Admin/CompanyFinanses.cshtml
@@ -7,6 +7,8 @@
 
 @using (Html.BeginForm("CompanyFinanses", "Admin", FormMethod.Post))
 {
+    <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+
     @*<p> @Html.DropDownList("Year", (IEnumerable<SelectListItem>)ViewData["Years"], null, new { style = "width : 200px", @class = "form-control" }) @Html.ValidationMessage("Years")</p>*@
     <table>
         <tr>
