--- a/ERP Love-Gid/Views/Home/AddReceivedMoney.cshtml
+++ b/ERP Love-Gid/Views/Home/AddReceivedMoney.cshtml
@@ -17,6 +17,7 @@
                 {
 
                     <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+                    <input hidden value="@ViewBag.adminId" name="adminId" />
 
                     <p>@Html.ActionLink("Обратно к списку", "MyFinanses")</p>
                     <table>
