--- a/ERP Love-Gid/Views/Home/EditPayFromPeer.cshtml
+++ b/ERP Love-Gid/Views/Home/EditPayFromPeer.cshtml
@@ -13,9 +13,10 @@
             <section>
 
 
-                @using (Html.BeginForm("AddMyJobPayment", "Home", FormMethod.Post))
+                @using (Html.BeginForm("EditPayFromPeer", "Home", FormMethod.Post))
                 {
                     <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
+                    <input hidden value="@ViewBag.adminId" name="adminId" />
 
 
                     <p>@Html.ActionLink("Обратно к списку", "MyFinanses")</p>
