--- a/ERP Love-Gid/Views/Home/EditPayFromPeer.cshtml
+++ b/ERP Love-Gid/Views/Home/EditPayFromPeer.cshtml
@@ -76,6 +76,7 @@
 
 
                     </table>
+                    <P>@Html.ActionLink("Удалить платеж", "DeletePaymentForPeerDetail", new { id = @ViewBag.Id, CurUserId = Convert.ToInt32(@ViewBag.CurUserId), adminId = Convert.ToInt32(@ViewBag.adminId) })</P>
 
                     <p><input type="submit" value="Сохранить" /></p>
                 }
