--- a/ERP Love-Gid/Views/Home/EditPaymentDetail.cshtml
+++ b/ERP Love-Gid/Views/Home/EditPaymentDetail.cshtml
@@ -85,7 +85,7 @@
                     <p></p>
                     <p><input type="submit" value="Сохранить" /></p>
 
-                    <P>@Html.ActionLink("Удалить платеж", "DeletePaymentDetail", new { id = @ViewBag.Id, CurUserId = Convert.ToInt32(@ViewBag.CurUserId) })</P>
+                    <P>@Html.ActionLink("Удалить платеж", "DeletePaymentDetail", new { id = @ViewBag.Id, CurUserId = Convert.ToInt32(@ViewBag.CurUserId), adminId = Convert.ToInt32(@ViewBag.adminId) })</P>
                 }
 
 
