--- a/ERP Love-Gid/Views/Admin/Events.cshtml
+++ b/ERP Love-Gid/Views/Admin/Events.cshtml
@@ -15,8 +15,7 @@
             <td> Наименование</td>
             <td>Тек. значение</td>
 
-            <td>Изменить
-            <td>
+            <td>Выберите тип<td>
         </tr>
 
         @foreach (Event cw in (IEnumerable<Event>)ViewData["Events"])
