--- a/ERP Love-Gid/Views/Shared/_Layout.cshtml
+++ b/ERP Love-Gid/Views/Shared/_Layout.cshtml
@@ -16,25 +16,27 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <input hidden value="@ViewBag.CurUserId" name="CurUserId" />          
+                <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
                 <input hidden value="@ViewBag.adminId" name="adminId" />
 
-                
+
                 @if (ViewBag.DateMonth1 != null)
                 {
                     <span>
-                        @Html.DropDownList("DateMonth", (IEnumerable<SelectListItem>)ViewData["DateMonth1"], null, new { id = "Months", style = "width : 200px; background:#5682a3", @class = "navbar-brand", onchange = "onMyDropDownChange()", CurUserId = @ViewBag.CurUserId , adminId = @ViewBag.adminId }) @Html.ValidationMessage("DatePays")
+                        @Html.DropDownList("DateMonth", (IEnumerable<SelectListItem>)ViewData["DateMonth1"], null, new { id = "Months", style = "width : 200px; background:#5682a3", @class = "navbar-brand", onchange = "onMyDropDownChange()", CurUserId = @ViewBag.CurUserId, adminId = @ViewBag.adminId }) @Html.ValidationMessage("DatePays")
                     </span>
                 }
-                @Html.ActionLink("Мои договоры", "Index", "Home", new { area = "", idUser = Convert.ToInt32(ViewBag.CurUserId) , adminId = Convert.ToInt32(ViewBag.adminId) }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Мои договоры", "Index", "Home", new { area = "", idUser = Convert.ToInt32(ViewBag.CurUserId), adminId = Convert.ToInt32(ViewBag.adminId) }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Мои Финансы", "MyFinanses", "Home", new { area = "", CurUserId = Convert.ToInt32(ViewBag.CurUserId), adminId = Convert.ToInt32(ViewBag.adminId) }, new { @class = "navbar-brand" })
 
 
                 @if (ViewBag.Admin == true)
                 {@Html.ActionLink("Режим Администратора", "ChangeToAdmin", "Home", new { area = "", CurUserId = Convert.ToInt32(ViewBag.CurUserId), adminId = Convert.ToInt32(ViewBag.adminId) }, new { @class = "navbar-brand" })}
 
-                @Html.ActionLink("Выйти", "Exit", "Home", new { @class = "navbar-brand" })
-                <text class="navbar-brand"><strong>@ViewBag.User</strong> </text>
+                @Html.ActionLink("Выйти", "Exit", "Home", new {CurUserId = Convert.ToInt32(ViewBag.CurUserId), adminId = Convert.ToInt32(ViewBag.adminId) }, new { @class = "navbar-brand"})
+               
+
+                    <text class="navbar-brand"><strong>@ViewBag.User</strong>  @ViewBag.EmplNameForAdmin   </text>
 
 
 
