--- a/ERP Love-Gid/Views/Shared/_LayoutAdmin.cshtml
+++ b/ERP Love-Gid/Views/Shared/_LayoutAdmin.cshtml
@@ -16,9 +16,9 @@
         <div class="container">
             <div class="navbar-header">
                 <input hidden value="@ViewBag.CurUserId" name="CurUserId" />
-
-                @Html.ActionLink("Все договоры", "Index", "Admin", new { area = "", id = ViewBag.ID, CurUserId = Convert.ToInt32(ViewBag.CurUserId) }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Финансы компании", "CompanyFinanses", "Admin", new { area = "", CurUserId = Convert.ToInt32(ViewBag.CurUserId) }, new { @class = "navbar-brand" })
+
+                @Html.ActionLink("Все договоры", "Index", "Admin", new { area = "",   id = Convert.ToInt32(ViewBag.CurUserId) }, new { @class = "navbar-brand" })
 
                 @Html.ActionLink("Сотрудники", "Employees", "Admin", new { area = "", CurUserId = Convert.ToInt32(ViewBag.CurUserId) }, new { @class = "navbar-brand" })
                 @Html.ActionLink("Зарплаты", "Salary", "Admin", new { area = "", CurUserId = Convert.ToInt32(ViewBag.CurUserId) }, new { @class = "navbar-brand" })
